--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
-.container{
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+.main-content{
+    width: 90%;
+    margin: auto;
     border: solid 1px #DFDFDF;
+    margin-top: 30px;
 }
 
 .header{
     background-color: #F7F7F7;
     border: solid 1px #DFDFDF;
-    padding: 10px;
+    padding: 5px;
     width: 100%;
     margin-bottom: 10px;
+}
+
+.form{
+    width: 95%;
+    margin: 0 auto;
 }
 
 input,
@@ -45,10 +59,27 @@ textarea {
 }
 
 .footer{
-    position: relative;
-    left: 85%;
+    text-align: end;
+    margin-bottom: 20px;
 }
 
 .btn-secondary{
     margin-right: 20px;
 }
+
+@media only screen and (min-device-width: 700px) and  (max-width: 1250px) {
+    .cards-info{
+        display: flex;
+        flex-direction: column;
+        background-color: grey;
+        padding: 10px;
+        width: 10%;
+        border-radius: 5px;
+    }
+  }
+
+  @media only screen and (max-width: 700px){
+    .cards-info{
+        width: 30%;
+    }
+  }
